# stt-catalog-merger

./: .gitignore  README.md  pyproject.toml
data/: token.pickle
src/stt_catalog_merger/: google_sheet_parser.py  merge_meta.py  update_csv_gender.py
tests/: test_google_sheet_parser.py
tests/test_data/: catalog.csv  expected_catalog_updated.csv  merged_STT.csv
