[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stt_catalog_merger"
version = "0.0.1"
authors = [
  { name="OpenPecha", email="dev@openpecha.org" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "numpy>=1.26.4",
  "matplotlib-inline>=0.1.6",
  "google-api-core>=2.18.0",
  "google-api-python-client>=2.125.0",
  "google-auth>=2.29.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.0",
  "googleapis-common-protos>=1.63.0",
  "httplib2>=0.22.0",
  "oauthlib>=3.2.2",
  "requests>=2.31.0",
  "requests-oauthlib>=2.0.0",
  "protobuf>=4.25.3",
  "urllib3>=2.2.1"
]
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
